--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
